feat: Integrate external-dns for kubeapi

--- a/charts/kubeadm/values.yaml
+++ b/charts/kubeadm/values.yaml
@@ -35,6 +35,9 @@ addons:
     # -- /etc/cloudbender/clusterBackup.passphrase
     passwordFile: ""
 
+  external-dns:
+    enabled: false
+
 network:
   multus:
     enabled: false
