--- a/charts/kubeadm/templates/resources/10-runtimeClass.yaml
+++ b/charts/kubeadm/templates/resources/10-runtimeClass.yaml
@@ -2,7 +2,7 @@ apiVersion: node.k8s.io/v1
 kind: RuntimeClass
 metadata:
   name: crio
-handler: runc
+handler: crun
 overhead:
   podFixed:
-    memory: 16Mi
+    memory: 4Mi
