--- a/charts/kubezero-istio/templates/servicemonitor.yaml
+++ b/charts/kubezero-istio/templates/servicemonitor.yaml
@@ -1,4 +1,4 @@
-{{- if index .Values "istio-discovery" "telemetry" "enabled" }}
+{{- if .Values.istiod.telemetry.enabled }}
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
