--- a/charts/kubezero-istio/templates/grafana-dashboards.yaml
+++ b/charts/kubezero-istio/templates/grafana-dashboards.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.istiod.telemetry.enabled }}
+{{- if index .Values "istio-discovery" "telemetry" "enabled" }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
