--- a/charts/kubezero/values.yaml
+++ b/charts/kubezero/values.yaml
@@ -31,12 +31,18 @@ storage:
 istio:
   enabled: false
   namespace: istio-system
-  targetRevision: 0.7.6
+  targetRevision: 0.8.0
 
 istio-ingress:
   enabled: false
   namespace: istio-ingress
-  targetRevision: 0.7.6
+  targetRevision: 0.8.0
+
+istio-private-ingress:
+  enabled: false
+  chart: kubezero-istio-gateway
+  namespace: istio-ingress
+  targetRevision: 0.8.0
 
 metrics:
   enabled: false
