--- a/charts/kubezero-istio-gateway/templates/envoyfilter-proxy-protocol.yaml
+++ b/charts/kubezero-istio-gateway/templates/envoyfilter-proxy-protocol.yaml
@@ -16,6 +16,6 @@ spec:
       operation: MERGE
       value:
         listener_filters:
-        - name: envoy.listener.proxy_protocol
-        - name: envoy.listener.tls_inspector
+        - name: envoy.filters.listener.proxy_protocol
+        - name: envoy.filters.listener.tls_inspector
 {{- end }}
