--- a/charts/kubezero/values.yaml
+++ b/charts/kubezero/values.yaml
@@ -38,12 +38,16 @@ istio-ingress:
   chart: kubezero-istio-gateway
   namespace: istio-ingress
   targetRevision: 0.8.0
+  gateway:
+    service: {}
 
 istio-private-ingress:
   enabled: false
   chart: kubezero-istio-gateway
   namespace: istio-ingress
   targetRevision: 0.8.0
+  gateway:
+    service: {}
 
 metrics:
   enabled: false
