--- a/charts/kubezero-logging/charts/eck-operator/values.yaml
+++ b/charts/kubezero-logging/charts/eck-operator/values.yaml
@@ -32,7 +32,7 @@ imagePullSecrets: []
 resources:
   limits:
     cpu: 1
-    memory: 512Mi
+    memory: 1Gi
   requests:
     cpu: 100m
     memory: 150Mi
@@ -122,7 +122,7 @@ kubeAPIServerIP: null
 telemetry:
   # disabled determines whether the operator periodically updates ECK telemetry data for Kibana to consume.
   disabled: false
-  # distibutionChannel denotes which distribution channel was used to install the operator.
+  # distributionChannel denotes which distribution channel was used to install the operator.
   distributionChannel: "helm"
 
 # config values for the operator.
@@ -155,8 +155,16 @@ config:
   # certificatesRotateBefore defines when to rotate a certificate that is due to expire.
   certificatesRotateBefore: 24h
 
+  # exposedNodeLabels is an array of regular expressions of node labels which are allowed to be copied as annotations on Elasticsearch Pods.
+  exposedNodeLabels: [ "topology.kubernetes.io/.*", "failure-domain.beta.kubernetes.io/.*" ]
+
   # setDefaultSecurityContext determines whether a default security context is set on application containers created by the operator.
-  setDefaultSecurityContext: true
+  # *note* that the default option now is "auto-detect" to attempt to set this properly automatically when both running
+  # in an openshift cluster, and a standard kubernetes cluster.  Valid values are as follows:
+  # "auto-detect" : auto detect
+  # "true"        : set pod security context when creating resources.
+  # "false"       : do not set pod security context when creating resources.
+  setDefaultSecurityContext: "auto-detect"
 
   # kubeClientTimeout sets the request timeout for Kubernetes API calls made by the operator.
   kubeClientTimeout: 60s
@@ -183,7 +191,7 @@ podMonitor:
   annotations: {}
 
   # namespace determines in which namespace the podMonitor will be deployed.
-  # If not set the podMonitor will be created in the namespace to release is installed into
+  # If not set the podMonitor will be created in the namespace where the Helm release is installed into
   # namespace: monitoring
 
   # interval specifies the interval at which metrics should be scraped
@@ -199,8 +207,8 @@ podMonitor:
   podMetricsEndpointConfig: {}
   # honorTimestamps: true
 
-# Internal use only
-internal:
+# Globals meant for internal use only
+global:
   # manifestGen specifies whether the chart is running under manifest generator. 
   # This is used for tasks specific to generating the all-in-one.yaml file.
   manifestGen: false
@@ -208,4 +216,5 @@ internal:
   # Usually we do want that to happen (e.g. all-in-one.yaml) but, sometimes we don't (e.g. E2E tests). 
   createOperatorNamespace: true
   # kubeVersion is the effective Kubernetes version we target when generating the all-in-one.yaml.
-  kubeVersion: 1.12.0
+  kubeVersion: 1.16.0
+
