--- a/charts/kubezero/templates/istio-ingress.yaml
+++ b/charts/kubezero/templates/istio-ingress.yaml
@@ -71,11 +71,13 @@ gateway:
 
 telemetry:
   enabled: {{ $.Values.metrics.enabled }}
+{{- with index .Values "istio-ingress" "certificates" }}
 certificates:
-{{- range $cert := index .Values "istio-ingress" "certificates" }}
+{{- range $cert := . }}
 - name: {{ $cert.name }}
   dnsNames:
   {{- toYaml $cert.dnsNames | nindent 4 }}
+{{- end }}
 {{- end }}
 proxyProtocol: {{ default true (index .Values "istio-ingress" "proxyProtocol") }}
 
