--- a/charts/kubezero-storage/charts/aws-efs-csi-driver/templates/controller-deployment.yaml
+++ b/charts/kubezero-storage/charts/aws-efs-csi-driver/templates/controller-deployment.yaml
@@ -13,6 +13,10 @@ spec:
       app: efs-csi-controller
       app.kubernetes.io/name: {{ include "aws-efs-csi-driver.name" . }}
       app.kubernetes.io/instance: {{ .Release.Name }}
+  {{- with .Values.controller.updateStrategy }}
+  strategy:
+    type: {{ . }}
+  {{- end }}
   template:
     metadata:
       labels:
@@ -58,7 +62,7 @@ spec:
             - name: CSI_ENDPOINT
               value: unix:///var/lib/csi/sockets/pluginproxy/csi.sock
           {{- if .Values.controller.extraEnv }}
-{{ toYaml .Values.controller.extraEnv | indent 12 }}
+            {{- toYaml .Values.controller.extraEnv | nindent 12 }}
           {{- end }}
           volumeMounts:
             - name: socket-dir
