fix: Ensure patches are applied during kubeadm upgrade

--- a/charts/kubeadm/templates/InitConfiguration.yaml
+++ b/charts/kubeadm/templates/InitConfiguration.yaml
@@ -6,6 +6,7 @@ localAPIEndpoint:
 patches:
   directory: /tmp/patches
 nodeRegistration:
+  criSocket: "unix:///var/run/crio/crio.sock"
   ignorePreflightErrors:
   - DirAvailable--var-lib-etcd
   - DirAvailable--etc-kubernetes-manifests
