--- a/charts/kubeadm/templates/JoinConfiguration.yaml
+++ b/charts/kubeadm/templates/JoinConfiguration.yaml
@@ -1,4 +1,6 @@
 apiVersion: kubeadm.k8s.io/v1beta3
 kind: JoinConfiguration
+nodeRegistration:
+  criSocket: "unix:///var/run/crio/crio.sock"
 patches:
   directory: /tmp/patches
