--- a/charts/kubezero-addons/templates/device-plugins/aws-neuron-ds.yaml
+++ b/charts/kubezero-addons/templates/device-plugins/aws-neuron-ds.yaml
@@ -22,6 +22,9 @@ spec:
       - key: aws.amazon.com/neuron
         operator: Exists
         effect: NoSchedule
+      - key: kubezero-workergroup
+        effect: NoSchedule
+        operator: Exists
       # Mark this pod as a critical add-on; when enabled, the critical add-on
       # scheduler reserves resources for critical add-on pods so that they can
       # be rescheduled after a failure.
