feat: Make Keycloak work behind Istio

--- a/charts/kubezero-auth/values.yaml
+++ b/charts/kubezero-auth/values.yaml
@@ -1,2 +1,10 @@
 keycloak:
   enabled: false
+
+  istio:
+    enabled: false
+    gateway: istio-ingress/private-ingressgateway
+    url: ""
+
+  metrics:
+    enabled: false
