--- a/charts/kubezero-redis/Chart.yaml
+++ b/charts/kubezero-redis/Chart.yaml
@@ -2,25 +2,27 @@ apiVersion: v2
 name: kubezero-redis
 description: KubeZero Umbrella Chart for Redis HA
 type: application
-version: 0.3.5
+version: 0.4.0
 home: https://kubezero.com
 icon: https://cdn.zero-downtime.net/assets/kubezero/logo-small-64.png
 keywords:
   - kubezero
   - redis
+  - redis-cluster
 maintainers:
-  - name: Quarky9
+  - name: Stefan Reimer
+    email: stefan@zero-downtime.net
 dependencies:
   - name: kubezero-lib
-    version: ">= 0.1.3"
+    version: ">= 0.1.4"
     repository: https://cdn.zero-downtime.net/charts/
   - name: redis
-    version: 15.5.4
+    version: 16.10.1
     repository: https://charts.bitnami.com/bitnami
     condition: redis.enabled
   - name: redis-cluster
-    version: 6.3.9
+    version: 7.6.1
     repository: https://charts.bitnami.com/bitnami
     condition: redis-cluster.enabled
 
-kubeVersion: ">= 1.18.0"
+kubeVersion: ">= 1.20.0"
