feat: 1.22.8-10 and other modules latest vesions

--- a/charts/kubeadm/templates/KubeletConfiguration.yaml
+++ b/charts/kubeadm/templates/KubeletConfiguration.yaml
@@ -4,8 +4,7 @@ kind: KubeletConfiguration
 failSwapOn: false
 cgroupDriver: cgroupfs
 logging:
-  # We already have syslog-ng logging json
-  # format: json
+  format: json
 hairpinMode: hairpin-veth
 {{- if .Values.systemd }}
 resolvConf: /run/systemd/resolve/resolv.conf
