--- a/charts/kubezero-ci/values.yaml
+++ b/charts/kubezero-ci/values.yaml
@@ -17,7 +17,7 @@ gitea:
   enabled: false
 
   image:
-    tag: 1.16.6
+    tag: 1.16.8
     rootless: true
 
   securityContext:
@@ -114,9 +114,9 @@ jenkins:
                       numToKeepStr: "10"
 
     installPlugins:
-      - kubernetes:3580.v78271e5631dc
-      - workflow-aggregator:2.7
-      - git:4.11.1
+      - kubernetes:3600.v144b_cd192ca_a_
+      - workflow-aggregator:581.v0c46fa_697ffd
+      - git:4.11.3
       - configuration-as-code:1429.v09b_044a_c93de
       - antisamy-markup-formatter:2.7
       - prometheus:2.0.11
