--- a/charts/kubezero-ci/values.yaml
+++ b/charts/kubezero-ci/values.yaml
@@ -117,7 +117,7 @@ jenkins:
       - kubernetes:3651.v908e7db_10d06
       - workflow-aggregator:581.v0c46fa_697ffd
       - git:4.11.3
-      - configuration-as-code:1462.v069a_b_57ff5c8
+      - configuration-as-code:1464.vd8507b_82e41a_
       - antisamy-markup-formatter:2.7
       - prometheus:2.0.11
       - htmlpublisher:1.30
@@ -161,6 +161,8 @@ jenkins:
       apiVersion: v1
       kind: Pod
       spec:
+        securityContext:
+          fsGroup: 1000
         serviceAccountName: jenkins-podman-aws
         containers:
         - name: jnlp
