--- a/charts/kubezero-network/Chart.yaml
+++ b/charts/kubezero-network/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: kubezero-network
 description: KubeZero umbrella chart for all things network
 type: application
-version: 0.2.1
+version: 0.3.0
 home: https://kubezero.com
 icon: https://cdn.zero-downtime.net/assets/kubezero/logo-small-64.png
 keywords:
@@ -15,15 +15,17 @@ maintainers:
   - name: Stefan Reimer
     email: stefan@zero-downtime.net
 dependencies:
+  - name: kubezero-lib
+    version: ">= 0.1.5"
+    repository: https://cdn.zero-downtime.net/charts/
   - name: cilium
-    version: 1.11.3
+    version: 1.11.6
     repository: https://helm.cilium.io/
     condition: cilium.enabled
   - name: metallb
-    version: 0.10.2
+    version: 0.13.3
     repository: https://metallb.github.io/metallb
     condition: metallb.enabled
-  # Legact / Testing support
   - name: calico
     version: 0.2.2
     condition: calico.enabled
