--- a/charts/kubezero-network/values.yaml
+++ b/charts/kubezero-network/values.yaml
@@ -10,23 +10,33 @@ metallb:
     nodeSelector:
       node-role.kubernetes.io/control-plane: ""
 
-  configInline: {}
-#   address-pools:
-#   - name: my-ip-space
-#     protocol: layer2
-#     addresses:
-#     - 192.168.42.0/24
+  ipAddressPools: []
+  #- name: my-ip-space
+  #  protocol: layer2
+  #  addresses:
+  #  - 192.168.42.0/24
 
 multus:
   enabled: false
-  tag: "v3.8.1"
+  tag: "v3.9"
+
+  clusterNetwork: "calico"
+  defaultNetworks: []
+   # - "cilium"
+  readinessindicatorfile: "/etc/cni/net.d/10-calico.conflist"
 
 cilium:
   enabled: false
 
   cni:
+    binPath: "/usr/libexec/cni"
     #-- Ensure this is false if multus is enabled
-    exclusive: true
+    exclusive: false
+
+  cgroup:
+    autoMount:
+      enabled: false
+    hostRoot: "/sys/fs/cgroup"
 
   tunnel: geneve
 
@@ -36,6 +46,11 @@ cilium:
 
   operator:
     replicas: 1
+    tolerations:
+    - key: node-role.kubernetes.io/master
+      effect: NoSchedule
+    nodeSelector:
+      node-role.kubernetes.io/control-plane: ""
 
   hubble:
     enabled: false
