--- a/charts/kubeadm/templates/admin-aws-iam.yaml
+++ b/charts/kubeadm/templates/admin-aws-iam.yaml
@@ -16,7 +16,7 @@ users:
 - name: kubernetes-admin
   user:
     exec:
-      apiVersion: client.authentication.k8s.io/v1alpha1
+      apiVersion: client.authentication.k8s.io/v1beta1
       command: aws-iam-authenticator
       args:
         - "token"
